<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.aakov.emergencyapp.UserDetailActivity">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorLightGray"
        android:id="@+id/container_user_detail">

        <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/button_user_detail_back"
            android:background="@drawable/bt_back2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_detail"
            android:textAllCaps="true"
            android:id="@+id/tv_user_detail_header"
            android:layout_alignTop="@id/button_user_detail_back"
            android:layout_toEndOf="@id/button_user_detail_back"
            android:layout_marginStart="21dp"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textIsSelectable="false"/>

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/bt_save"
            android:id="@+id/button_user_detail_save"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_user_detail_first_name"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:hint="@string/FIRST_NAME"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:id="@+id/tv_user_detail_first_name"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_user_detail_last_name"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:hint="@string/LAST_NAME"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:id="@+id/tv_user_detail_last_name"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/et_user_detail_mobile_number"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:hint="@string/MOBILE_NUMBER"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_number"
            android:id="@+id/button_user_detail_verify_number"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/et_user_detail_code"
            android:hint="@string/CODE"
            android:gravity="center"
            android:layout_alignBottom="@id/button_user_detail_verify_number"
            android:layout_toEndOf="@id/button_user_detail_verify_number"/>

    </RelativeLayout>

</LinearLayout>
