<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorLightGray"
        android:id="@+id/container_main_header">

        <Button
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:id="@+id/button_main_menu"
            android:background="@drawable/bt_menu"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textIsSelectable="true"
            android:textColor="@color/colorBlack"
            android:id="@+id/tv_main_header"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/container_main_header"
        android:padding="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_detail"
            android:id="@+id/button_main_user_detail"
            android:layout_alignParentStart="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_list"
            android:id="@+id/button_main_emergency_list"
            android:layout_below="@id/button_main_user_detail"
            android:layout_alignParentStart="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_list"
            android:id="@+id/button_main_contact_list"
            android:layout_below="@id/button_main_emergency_list"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>

</RelativeLayout>
